录入信息大体框架

--- a/JiaoBaoYun-hb/css/home/index-menu.css
+++ b/JiaoBaoYun-hb/css/home/index-menu.css
@@ -2,3 +2,15 @@
 	border-radius: 50%;
 	width: 30%;
 }
+.app-icon{
+	color:lightskyblue;
+}
+.record-icon{
+	color: mediumspringgreen;
+}
+.set-icon{
+	color:lightskyblue;
+}
+.about-icon{
+	color: orange;
+}
