--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,7 +10,10 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
 }
+.icon-xie:before { content: "\e604"; }
 .icon-fenxiang:before { content: "\e600"; }
+.icon-shezhi:before { content: "\e606"; }
+.icon-about:before { content: "\e605"; }
 .icon-zanzan:before { content: "\e602"; }
 .icon-liaotian:before { content: "\e603"; }
 .icon-liaotian1:before { content: "\e601"; }
