--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -17,3 +17,4 @@
 .icon-zanzan:before { content: "\e602"; }
 .icon-liaotian:before { content: "\e603"; }
 .icon-liaotian1:before { content: "\e601"; }
+.icon-yunpan:before { content: "\e607"; }
