--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,11 +10,14 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
 }
+
 .icon-xie:before { content: "\e604"; }
 .icon-fenxiang:before { content: "\e600"; }
 .icon-shezhi:before { content: "\e606"; }
 .icon-about:before { content: "\e605"; }
 .icon-zanzan:before { content: "\e602"; }
 .icon-liaotian:before { content: "\e603"; }
-.icon-liaotian1:before { content: "\e601"; }
+.icon-xie1:before { content: "\e608"; }
 .icon-yunpan:before { content: "\e607"; }
+.icon-renren:before { content: "\e609"; }
+.icon-liaotian1:before { content: "\e601"; }
