--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,10 +10,11 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
 }
-
 .icon-xie:before { content: "\e604"; }
 .icon-fenxiang:before { content: "\e600"; }
+.icon-jia:before { content: "\e60a"; }
 .icon-shezhi:before { content: "\e606"; }
+.icon-xiangji:before { content: "\e60b"; }
 .icon-about:before { content: "\e605"; }
 .icon-zanzan:before { content: "\e602"; }
 .icon-liaotian:before { content: "\e603"; }
