--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -1,32 +1,51 @@
 .iconfont.mui-pull-right:before{
 	margin-left: 10px;	
 }
+.input-content{
+	position: absolute;
+	top: 45px;
+	width: 100%;
+	height: 25rem;
+}
 
 textarea{
-	margin: 10px;
+	margin: 0.7rem;
 	border-radius: 5px;
 	width: 96%;
-	height: 300px;
+	height: 25rem;
 }
 .take_pic,.add_file{
-	width: 100px;
-	height: 100px;
+	width: 6rem;
+	height: 6rem;
 	border: solid;
 	border-width: thin;
-	border-radius: 8px;
+	border-radius: 5px;
 	border-color: #929292;
-	padding: 10px;
+	padding: 0.7rem;
 	text-align: center;
 	position: absolute;
 }
+div>.icon-jia:before,.icon-xiangji:before{
+	font-size: 4.0rem;
+}
 .take_pic{
-	top: 255px;
-	left: 10px;
+	top: 19.6rem;
+	left: 0.8rem;
 	z-index: 1;
 }
 .add_file{
-	top: 255px;
-	left: 110px;
+	top: 19.6rem;
+	left: 6.9rem;
 	z-index: 1;
+}
+.chat_content_left .mui-pull-right{
+	width:75%;
+}
+.head-img{
+	text-align: center;
+	width: 20%;
+}
+ul{
+	margin: 5px;
 }
 
