--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -48,4 +48,15 @@ div>.icon-jia:before,.icon-xiangji:before{
 ul{
 	margin: 5px;
 }
-
+.group-button{
+	margin: 10%;
+	width: 80%;
+	height: 4rem;
+	border-radius: 1.8rem;
+	font-size: 2rem;
+	letter-spacing: 1rem;
+}
+.mui-grid-view img{
+	border-radius: 50%;
+	width: 100%;
+}
