--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,15 +10,14 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
 }
-
-
 .icon-xiangji:before { content: "\e60c"; }
 .icon-xie:before { content: "\e604"; }
 .icon-fenxiang:before { content: "\e600"; }
 .icon-jia:before { content: "\e60a"; }
 .icon-shezhi:before { content: "\e606"; }
 .icon-about:before { content: "\e605"; }
-.icon-zanzan:before { content: "\e602"; }
+.icon-zanzan:before { content: "\e60b"; }
+.icon-zanzan1:before { content: "\e602"; }
 .icon-liaotian:before { content: "\e603"; }
 .icon-xie1:before { content: "\e608"; }
 .icon-yunpan:before { content: "\e607"; }
