--- a/JiaoBaoYun-hb/css/knowledge/knowledge.css
+++ b/JiaoBaoYun-hb/css/knowledge/knowledge.css
@@ -12,21 +12,24 @@
 .title{
 	font-size: 1.5rem;
 	color: black;
+	margin-right: 4rem;
 }
 .detail{
-	text-align: center;
+	position: absolute;
+	top: 1.0rem;
+	right: 1.5rem;
 	float: right;
 	color: deepskyblue;
 	font-size: 1.2rem;
 }
 .answer-name{
 	color: blue;
-	width: 10%;
+	width: 12%;
 	float: left;
 }
 .answer-answer{
 	float: right;
-	width: 90%;
+	width: 88%;
 }
 .knowledge-list-cell{
 	margin-top:0.5rem;
