--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -20,6 +20,7 @@
 .icon-zanzan1:before { content: "\e602"; }
 .icon-liaotian:before { content: "\e603"; }
 .icon-xie1:before { content: "\e608"; }
+.icon-links:before { content: "\e60d"; }
 .icon-yunpan:before { content: "\e607"; }
 .icon-renren:before { content: "\e609"; }
 .icon-liaotian1:before { content: "\e601"; }
