--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -3,7 +3,7 @@
 	display: none;*/
 	position: absolute;
 	left: -999rem;
-	padding: 5px;
+	padding: .5rem;
 	z-index: 100;
 	background-color: white;
 	border-radius: 8px;
@@ -23,12 +23,18 @@
 }
 
 .sub-nav li {
-	
 	list-style: none;
 	float: none;
 	font-size: .875em;
-	margin-top: .5em;
+	/*margin-top: .5em;*/
 	width: auto;
+}
+li>a{
+	color: rgb(106,125,143);
+}
+li>a:before{
+	padding-left:.5rem;
+	padding-right: .5rem;
 }
 
 
