--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -1,40 +1,7 @@
-.sub-nav{
-	/*overflow: hidden;
-	display: none;*/
-	position: absolute;
-	left: -999rem;
-	padding: .5rem;
-	z-index: 100;
-	background-color: white;
-	border-radius: 8px;
-	
+.mui-popover{
+	position: fixed;
+	top:0.5rem;
+	right: 0.5rem;
+	z-index: 1000;
+	width: 8rem;
 }
-.mui-icon-bars:hover+.sub-nav{
-	/*display:block;*/
-	/*overflow: auto;*/
-	right: 0px;
-	top: 25px;
-	left: auto;
-}
-.sub-nav:hover{
-	right: 0px;
-	top: 25px;
-	left: auto;
-}
-
-.sub-nav li {
-	list-style: none;
-	float: none;
-	font-size: .875em;
-	/*margin-top: .5em;*/
-	width: auto;
-}
-li>a{
-	color: rgb(106,125,143);
-}
-li>a:before{
-	padding-left:.5rem;
-	padding-right: .5rem;
-}
-
-
