--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -25,3 +25,11 @@ header .icon-xiangji:before{
 	border-radius: 50%;
 	padding: .5rem;
 }
+
+.mui-segmented-control {
+	font-size: 14px;
+	border: 0px solid gray;
+	background-color: transparent;
+}
+
+
