--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,6 +10,8 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
 }
+.icon-close:before { content: "\e646"; }
+
 .icon-xiangji:before { content: "\e60c"; }
 
 .icon-shexiangji:before { content: "\e60e"; }
@@ -19,8 +21,6 @@
 .icon-fenxiang:before { content: "\e600"; }
 
 .icon-jia:before { content: "\e60a"; }
-
-.icon-links:before { content: "\e60d"; }
 
 .icon-shezhi:before { content: "\e606"; }
 
