--- a/JiaoBaoYun-hb/css/homework/publish-answer.css
+++ b/JiaoBaoYun-hb/css/homework/publish-answer.css
@@ -24,6 +24,9 @@
 	right: 0;
 	display: none;
 }
+.img-container{
+	min-height: 300px;
+}
 .mui-preview-image.mui-fullscreen {
 	position: fixed;
 	z-index: 20;
