--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -14,6 +14,8 @@
 
 .icon-close:before { content: "\e646"; }
 
+.icon-zone:before { content: "\e64c"; }
+
 .icon-xiangji:before { content: "\e60c"; }
 
 .icon-guanbi:before { content: "\e614"; }
@@ -28,9 +30,15 @@
 
 .icon-kongjian:before { content: "\e669"; }
 
+.icon-newmessage:before { content: "\e731"; }
+
 .icon-shezhi:before { content: "\e606"; }
 
 .icon-shezhi1:before { content: "\e631"; }
+
+.icon-group:before { content: "\e753"; }
+
+.icon-jifen:before { content: "\e6db"; }
 
 .icon-jiaqun:before { content: "\e60d"; }
 
@@ -49,6 +57,8 @@
 .icon-shubendisc:before { content: "\e682"; }
 
 .icon-xie1:before { content: "\e608"; }
+
+.icon-qunziliao:before { content: "\e615"; }
 
 .icon-yunpan:before { content: "\e607"; }
 
