--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -27,7 +27,7 @@
 /*header统一样式*/
 header:last-of-type{
 	/*背景颜色*/
-	background: rgb(20,183,246);
+	background: #13b7f6;
 	font-family:'微软雅黑 Bold', '微软雅黑';
 }
 /*header中的icon 白色*/
