--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -102,7 +102,10 @@ h6{font-size:1.6rem}
 /*body>div>div>div :last-of-type{
 	background-color: white;
 }*/
-
+header>a{
+	padding-top: 1.2rem;
+	font-size: 1.5rem;
+}
 
 
 
