--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -129,3 +129,8 @@ p font{
 	background-color: transparent;
 	border-bottom: none;
 }
+.circular-square:last-of-type{
+	width: 4rem;
+	height: 4rem;
+	border-radius: 50%;
+}
