--- a/JiaoBaoYun-hb/css/quan/about-me.css
+++ b/JiaoBaoYun-hb/css/quan/about-me.css
@@ -9,3 +9,21 @@
 p span{
 	color: dodgerblue;
 }
+.refer-content{
+	width: 100%;
+	height: 4rem;
+	background-color:lightgray;
+	padding: .5rem;
+}
+.refer-content span{
+	color: dodgerblue;
+}
+.comment-content{
+	font-size: 1.6rem;
+	color: #000000;
+	padding: .5rem;
+}
+.extras{
+	padding: .5rem;
+}
+
