--- a/JiaoBaoYun-hb/css/quan/about-me.css
+++ b/JiaoBaoYun-hb/css/quan/about-me.css
@@ -1,7 +1,8 @@
 .title-img{
 	float: left;
-	width: 20%;
-	padding-right: 1rem;
+	width: 4rem;
+	height: 4rem;
+	margin-right: 1rem;
 }
 .title-words{
 	width: 70%;
