--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -69,7 +69,8 @@ div>.icon-jia:before,.icon-xiangji:before{
 .head-img{
 	margin-top: .5rem;
 	text-align: center;
-	width: 20%;
+	width: 4rem;
+	/*height: 4rem;*/
 }
 /**
  * 班级空间列表样式
@@ -100,8 +101,8 @@ ul{
  * 班级空间 头像样式
  */
 .head-portrait{
-	width: 4rem;
-	height: 4rem;
+	width: 3rem;
+	height: 3rem;
 	border-radius: 50%;
 }
 p font{
@@ -109,7 +110,7 @@ p font{
 	padding-right: 1.2rem;
 }
 .mui-table-view-cell {
-	position: relative;
+	/*position: relative;*/
 	overflow: hidden;
 	-webkit-touch-callout: none
 }
@@ -133,4 +134,12 @@ p font{
 	width: 4rem;
 	height: 4rem;
 	border-radius: 50%;
+}
+.chat-words{
+	color: #000000;
+	font-size: 1.0rem;
+	padding-bottom: .2rem;
+}
+.chat-bottom{
+	white-space: nowrap;
 }
