--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -70,14 +70,13 @@ div>.icon-jia:before,.icon-xiangji:before{
 	margin-top: .5rem;
 	text-align: center;
 	width: 4rem;
+	max-width: 24%;
 	/*height: 4rem;*/
 }
 /**
- * 班级空间列表样式
+ * 班级空间样式
  */
-ul{
-	margin: 5px;
-}
+
 /**
  * 班级群 
  * 退群button样式
