好像也没改啥

--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -65,6 +65,8 @@ div>.icon-jia:before,.icon-xiangji:before{
  */
 .chat_content_left{
 	width:75%; 
+	margin-right: 0;
+	padding-right: 0;
 }
 .head-img{
 	margin-top: .5rem;
