不同系统关闭侧滑菜单

--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -106,10 +106,14 @@ div>.icon-jia:before,.icon-xiangji:before{
 	height: 3rem;
 	border-radius: 50%;
 }
-p font{
-	padding-left: 1.2rem;
-	padding-right: 1.2rem;
+.icon-xianshi{
+	float: right;
 }
+
+.icon-support{
+	float: right;
+}
+
 .mui-table-view-cell {
 	/*position: relative;*/
 	overflow: hidden;
