--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -62,6 +62,10 @@
 
 .icon-qunziliao:before { content: "\e615"; }
 
+.icon-upload:before { content: "\e632"; }
+
+.icon-download:before { content: "\e63b"; }
+
 .icon-yunpan:before { content: "\e607"; }
 
 .icon-renren:before { content: "\e609"; }
@@ -72,8 +76,26 @@
 
 .icon-tingzhi:before { content: "\e62f"; }
 
+.icon-newfolder:before { content: "\e625"; }
+
+.icon-chuanshu:before { content: "\e61d"; }
+
+.icon-word:before { content: "\e7e7"; }
+
 .icon-xianshi:before { content: "\e861"; }
 
 .icon-support:before { content: "\e905"; }
 
 .icon-jiaobaoyuntubiao:before { content: "\e610"; }
+
+.icon-excel:before { content: "\e8aa"; }
+
+.icon-mp3:before { content: "\e8ab"; }
+
+.icon-txt:before { content: "\e8ad"; }
+
+.icon-zip:before { content: "\e8ae"; }
+
+.icon-file:before { content: "\e8af"; }
+
+.icon-pdf:before { content: "\e8e2"; }
