--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -1,15 +1,16 @@
-/*@author an*/
-@font-face {font-family: "iconfont";
-  src: url('../../fonts/iconfont.ttf') format('truetype'); /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-}
 
-.iconfont {
-  font-family:"iconfont" !important;
-  font-size:16px;
-  font-style:normal;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
-}
+  @font-face {font-family: "iconfont";
+        src:url('../../fonts/iconfont.ttf') format('truetype'); /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    }
+
+    .iconfont {
+        font-family:"iconfont" !important;
+        font-size:16px;
+        font-style:normal;
+        -webkit-font-smoothing: antialiased;
+        -webkit-text-stroke-width: 0.2px;
+    }
+
 .icon-bianji:before { content: "\3486"; }
 
 .icon-close:before { content: "\e646"; }
@@ -34,6 +35,8 @@
 
 .icon-shezhi:before { content: "\e606"; }
 
+.icon-yunpan1:before { content: "\e694"; }
+
 .icon-shezhi1:before { content: "\e631"; }
 
 .icon-group:before { content: "\e753"; }
@@ -50,6 +53,8 @@
 
 .icon-zanzan1:before { content: "\e602"; }
 
+.icon-tianjia:before { content: "\e7f7"; }
+
 .icon-ruqun:before { content: "\e66e"; }
 
 .icon-liaotian:before { content: "\e603"; }
@@ -58,9 +63,15 @@
 
 .icon-shubendisc:before { content: "\e682"; }
 
+.icon-xiaoxizhongxin:before { content: "\e611"; }
+
 .icon-xie1:before { content: "\e608"; }
 
 .icon-qunziliao:before { content: "\e615"; }
+
+.icon-upload:before { content: "\e632"; }
+
+.icon-download:before { content: "\e63b"; }
 
 .icon-yunpan:before { content: "\e607"; }
 
@@ -72,8 +83,35 @@
 
 .icon-tingzhi:before { content: "\e62f"; }
 
+.icon-newfolder:before { content: "\e625"; }
+
+.icon-chuanshu:before { content: "\e61d"; }
+
+.icon-wenda:before { content: "\e655"; }
+
+.icon-jiaoxiaoquan:before { content: "\e8fe"; }
+
+.icon-word:before { content: "\e7e8"; }
+
 .icon-xianshi:before { content: "\e861"; }
+
+.icon-fabu:before { content: "\e863"; }
 
 .icon-support:before { content: "\e905"; }
 
+.icon-jiujiajingicon02-copy:before { content: "\e907"; }
+
 .icon-jiaobaoyuntubiao:before { content: "\e610"; }
+
+.icon-excel:before { content: "\e8aa"; }
+
+.icon-mp3:before { content: "\e8ab"; }
+
+.icon-txt:before { content: "\e8ad"; }
+
+.icon-zip:before { content: "\e8ae"; }
+
+.icon-file:before { content: "\e8af"; }
+
+.icon-pdf:before { content: "\e8e2"; }
+
