--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -1,15 +1,15 @@
 
-  @font-face {font-family: "iconfont";
-        src:url('../../fonts/iconfont.ttf') format('truetype'); /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    }
+ @font-face {font-family: "iconfont";
+  src:url('../../fonts/iconfont.ttf') format('truetype'); /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+}
 
-    .iconfont {
-        font-family:"iconfont" !important;
-        font-size:16px;
-        font-style:normal;
-        -webkit-font-smoothing: antialiased;
-        -webkit-text-stroke-width: 0.2px;
-    }
+.iconfont {
+	font-family:"iconfont" !important;
+	font-size:16px;
+	font-style:normal;
+	-webkit-font-smoothing: antialiased;
+	-webkit-text-stroke-width: 0.2px;
+}
 
 .icon-bianji:before { content: "\3486"; }
 
@@ -79,6 +79,8 @@
 
 .icon-liaotian1:before { content: "\e601"; }
 
+.icon-imge:before { content: "\e650"; }
+
 .icon-xinxiaoxi:before { content: "\e673"; }
 
 .icon-tingzhi:before { content: "\e62f"; }
@@ -106,6 +108,8 @@
 .icon-excel:before { content: "\e8aa"; }
 
 .icon-mp3:before { content: "\e8ab"; }
+
+.icon-video:before { content: "\e8ac"; }
 
 .icon-txt:before { content: "\e8ad"; }
 
