云盘文件图标，云盘界面显示

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -25,6 +25,8 @@
 
 .icon-xie:before { content: "\e604"; }
 
+.icon-trash:before { content: "\e620"; }
+
 .icon-fenxiang:before { content: "\e600"; }
 
 .icon-jia:before { content: "\e60a"; }
