--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -25,6 +25,8 @@
 
 .icon-xie:before { content: "\e604"; }
 
+.icon-trash:before { content: "\e620"; }
+
 .icon-fenxiang:before { content: "\e600"; }
 
 .icon-jia:before { content: "\e60a"; }
@@ -102,6 +104,26 @@
 .icon-support:before { content: "\e905"; }
 
 .icon-jiujiajingicon02-copy:before { content: "\e907"; }
+
+.icon-dili:before { content: "\e612"; }
+
+.icon-qita:before { content: "\e613"; }
+
+.icon-shengwu:before { content: "\e616"; }
+
+.icon-lishi:before { content: "\e617"; }
+
+.icon-shuxue:before { content: "\e618"; }
+
+.icon-yingyu:before { content: "\e619"; }
+
+.icon-zhengzhi:before { content: "\e61a"; }
+
+.icon-huaxue:before { content: "\e61b"; }
+
+.icon-wuli:before { content: "\e61c"; }
+
+.icon-yuwen:before { content: "\e61e"; }
 
 .icon-jiaobaoyuntubiao:before { content: "\e610"; }
 
