--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -61,4 +61,18 @@ header .icon-xiangji:before{
 .icon-qita{
 	color: #F54D55;
 }
+.subject-icon{
+	display: inline-block;
+	padding: 1rem;
+	font-size: 4rem;
+	width: 20%;
+}
+.header-words{
+	display: inline-block;
+	width: 70%;
+}
+.homework-bottom p{ 
+	 display: inline-block;
+	 padding-left: 1rem;
+}
 
