--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -75,4 +75,16 @@ header .icon-xiangji:before{
 	 display: inline-block;
 	 padding-left: 1rem;
 }
-
+.stuHomework-header{
+	background-repeat: no-repeat;
+	background-position: right;
+}
+.isCommentedBG{
+	background-image: url(../../image/homework/commented.gif);
+}
+.isSubmitted{
+	background-image: url(../../image/homework/submitted.png);
+}
+.submitOnline{
+	background-image: url(../../image/homework/need-submit.png);
+}
