--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -106,6 +106,12 @@ header>a{
 	padding-top: 1.2rem;
 	font-size: 1.5rem;
 }
+.display-none{
+	display: none;
+}
+.display-block{
+	display: block;
+}
 
 
 
