--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -51,7 +51,7 @@ b{
 /**段落字体大小*/
 p{font-size: 1.2rem;}
 /**最小字体*/
-small{font-size:1.2rem}
+/*small{font-size:1.2rem}*/
 /*1.9rem为标题 */
 h4{font-size:1.8rem}
 /*1.7rem为副标题 */
