--- a/JiaoBaoYun-hb/css/homework/homework-commit.css
+++ b/JiaoBaoYun-hb/css/homework/homework-commit.css
@@ -9,3 +9,9 @@
 	font-size: 2rem;
 	border-radius: 2rem;
 }
+.comment-area{
+	border: solid thin lightgray;
+}
+.homework-container{
+	min-height: 300px;
+}
