学生列表临时作业显示，并传值给下级页面

--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -110,6 +110,7 @@ header .icon-xiangji:before{
 .answerResult-pic{
 	padding: 1%;
 	width: 20%;
+	max-height: 100px;
 }
 .temporary-more{
 	padding-left: 10%;
