老师评价页面的界面逻辑

--- a/JiaoBaoYun-hb/css/homework/homework-commit.css
+++ b/JiaoBaoYun-hb/css/homework/homework-commit.css
@@ -13,5 +13,13 @@
 	border: solid thin lightgray;
 }
 .homework-container{
-	min-height: 300px;
+	min-height: 20rem;
+}
+.result-text{
+	min-height: 4rem;
+}
+.stuInfo-img{
+	width: 4rem;
+	height: 4rem;
+	border-radius: 50%;
 }
