--- a/JiaoBaoYun-hb/css/homework/homework-commit.css
+++ b/JiaoBaoYun-hb/css/homework/homework-commit.css
@@ -19,8 +19,25 @@
 .result-text{
 	min-height: 4rem;
 }
+.mui-content{
+	padding: 1rem;
+}
 .stuInfo-img{
+	display: inline-block;
 	width: 4rem;
 	height: 4rem;
 	border-radius: 50%;
+	margin-right: 1rem;
+	max-width: 20%;
+}
+.stuInfo-words{
+	display: inline-block;
+	width: 80%;
+}
+.student-info{
+	padding-top: 1rem;
+}
+.answer-img{
+	width: 20%;
+	padding: .5rem;
 }
