--- a/JiaoBaoYun-hb/css/homework/subjects-icon.css
+++ b/JiaoBaoYun-hb/css/homework/subjects-icon.css
@@ -36,7 +36,7 @@
 	width: 20%;
 }
 .isCommentedBG{
-	background-image: url(../../image/homework/commented.gif);
+	background-image: url(../../image/homework/commented.png);
 }
 .noCommentedBG{
 	background-image: url(../../image/homework/no-comment.png);
