--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -1,8 +1,8 @@
 header{
 	text-align: center;
 }
-header .icon-xiangji:before{
-	margin-right: .5rem;
+header .mui-icon-bars:before{
+	margin-left: 1rem;
 }
 
 /**
