--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -149,4 +149,4 @@
 
 .icon-shuxue:before { content: "\e61a"; }
 
-.icon-xiangji:before { content: "\e908"; }
+.icon-xiangji:before { content: "\e60c"; }
