--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -91,6 +91,8 @@
 
 .icon-tingzhi:before { content: "\e62f"; }
 
+.icon-allfolder:before { content: "\e66a"; }
+
 .icon-newfolder:before { content: "\e625"; }
 
 .icon-chuanshu:before { content: "\e61d"; }
