--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -135,7 +135,7 @@ header .mui-icon-bars:before{
 	vertical-align: middle;
 }
 .mui-table-view-divider{
-	background-color: darkgray;
-	color: white;
+	background-color: #e9e9e9;
+	color: #777777;
 }
 
