--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,7 +10,6 @@
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-stroke-width: 0.2px;
 }
-
 .icon-bianji:before { content: "\3486"; }
 
 .icon-close:before { content: "\e646"; }
@@ -46,6 +45,8 @@
 .icon-jifen:before { content: "\e6db"; }
 
 .icon-jiaqun:before { content: "\e60d"; }
+
+.icon-mic:before { content: "\e666"; }
 
 .icon-date:before { content: "\e6eb"; }
 
@@ -152,3 +153,9 @@
 .icon-shuxue:before { content: "\e61a"; }
 
 .icon-xiangji:before { content: "\e60c"; }
+
+.icon-yuyin:before { content: "\e622"; }
+
+.icon-shipin:before { content: "\e623"; }
+
+.icon-xiangji1:before { content: "\e624"; }
