--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -61,7 +61,7 @@ header .mui-icon-bars:before{
 	transition-duration: .2s;
 	-webkit-transition-property: background-color, border;
 	transition-property: background-color, border;
-	border: 2px solid #ddd;
+	border: 1px solid #ddd;
 	border-radius: 20px;
 	/*background-color: #fff;*/
 	background-clip: padding-box
@@ -69,11 +69,11 @@ header .mui-icon-bars:before{
 .switch-handle-mine {
 	position: absolute;
 	z-index: 1;
-	margin: -2px;
+	margin: -1px;
 	padding-top: 5px;
 	width: 8rem;
 	height: 30px;
-	color: dodgerblue;
+	color: #13B7F6;
 	-webkit-transition: .2s ease-in-out;
 	transition: .2s ease-in-out;
 	-webkit-transition-property: -webkit-transform, width, left;
@@ -135,7 +135,13 @@ header .mui-icon-bars:before{
 	vertical-align: middle;
 }
 .mui-table-view-divider{
-	background-color: #e9e9e9;
+	background-color: #e9e9eb;
 	color: #777777;
 }
-
+.mui-slider-indicator:last-of-type{
+	height: 4rem;
+	background-color: #ffffff;
+}
+.mui-control-item:last-of-type{
+	height: 4rem;
+}
