--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,6 +10,7 @@
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-stroke-width: 0.2px;
 }
+
 .icon-bianji:before { content: "\3486"; }
 
 .icon-close:before { content: "\e646"; }
@@ -81,6 +82,8 @@
 .icon-download:before { content: "\e63b"; }
 
 .icon-yunpan:before { content: "\e607"; }
+
+.icon-lishijilu:before { content: "\e621"; }
 
 .icon-renren:before { content: "\e609"; }
 
@@ -159,3 +162,5 @@
 .icon-shipin:before { content: "\e623"; }
 
 .icon-xiangji1:before { content: "\e624"; }
+
+.icon-xiangce:before { content: "\e908"; }
