0004073: 教师账号作业”我发布的“字体过大

--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -106,7 +106,7 @@ header>a{
 	padding-top: 1.2rem;
 	font-size: 1.5rem;
 }
-.display-none{
+.display-none:last-of-type{
 	display: none;
 }
 .display-block{
