--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -112,40 +112,21 @@ header>a{
 .display-block{
 	display: block;
 }
+/*分割线色值*/
 .mui-table-view-cell:after{
-	position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 15px;
-
-    height: 1px;
-
-    content: '';
-    -webkit-transform: scaleY(.5);
-            transform: scaleY(.5);
-
     background-color: #dedfe0;
 }
+/*分割线色值*/
 .mui-table-view-divider:after {
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	height: 1px;
-	content: '';
-	-webkit-transform: scaleY(.5);
-	transform: scaleY(.5);
+	background-color: #dedfe0;
+}
+/*分割线色值*/
+.mui-table-view-divider:before {
 	background-color: #dedfe0;
 }
 
-.mui-table-view-divider:before {
-	position: absolute;
-	top: 0;
-	right: 0;
-	left: 0;
-	height: 1px;
-	content: '';
-	-webkit-transform: scaleY(.5);
-	transform: scaleY(.5);
-	background-color: #dedfe0;
+
+.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
+	color: #00A5E0;
+	border-bottom: 2px solid #00A5E0;
 }
