--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -149,8 +149,12 @@ header .mui-icon-bars:before{
 	height: 4rem;
 }
 .stuHomework-header{
-	height: 6.5rem;
+	height: 5.5rem;
 }
 .answerResult-pic{
 	height: 6rem;
+}
+.answerResult-bottom>span{
+	display: inline-block;
+	padding-right: 2rem;
 }
