--- a/JiaoBaoYun-hb/css/homework/workdetail-stu.css
+++ b/JiaoBaoYun-hb/css/homework/workdetail-stu.css
@@ -1,24 +1,25 @@
+html,body,.mui-content{
+	background-color: white;
+}
 .homework-brief{
 	padding-top: 1rem;
 }
 .brief-words{
 	width: 80%;
-	float: right;
+	display: inline-block;
 }
-.btn-startAn{
-	margin-right: 1rem;
-}
+
 .answer-content{
 	background-color: lightgrey;
 	clear: both;
 	width: 100%;
-	height: 35px;
+	height: 1px;
 }
 .publisher,.publish-date{
 	display: inline-block;
 }
 .publish-date:last-of-type{
-	padding-right: 1rem;
+	padding-left: 1rem;
 }
 .subject-icon{
 	font-size: 5rem;
@@ -26,4 +27,17 @@
 }
 .homework-detail{
 	padding: 1rem;
+	margin-bottom: 6rem;
 }
+.btn-startAn{
+	position: fixed;
+	bottom: 1rem;
+	left: 5%;
+	width: 90%;
+	margin-right: 1rem;
+	background-color: #1db8f1;
+	border-color:#1db8f1 ;
+	color: white;
+	height: 4rem;
+}
+
