--- a/JiaoBaoYun-hb/css/homework/workdetail-stu.css
+++ b/JiaoBaoYun-hb/css/homework/workdetail-stu.css
@@ -3,14 +3,15 @@ html,body,.mui-content{
 }
 .homework-brief{
 	padding-top: 1rem;
+	height: 7.2rem;
 }
 .brief-words{
-	width: 80%;
+	max-width: 70%;
 	display: inline-block;
 }
 
 .answer-content{
-	background-color: lightgrey;
+	background-color: #dedfe0;
 	clear: both;
 	width: 100%;
 	height: 1px;
@@ -39,5 +40,8 @@ html,body,.mui-content{
 	border-color:#1db8f1 ;
 	color: white;
 	height: 4rem;
+}
+.brief-title,.brief-content{
+	color: #404040;
 }
 
