--- a/JiaoBaoYun-hb/css/utils/common.css
+++ b/JiaoBaoYun-hb/css/utils/common.css
@@ -106,6 +106,10 @@ header>a{
 	padding-top: 1.2rem;
 	font-size: 1.5rem;
 }
+.post-icon:last-of-type{
+	padding-top: 1.2rem;
+	font-size: 1.5rem;
+}
 .display-none:last-of-type{
 	display: none;
 }
