--- a/JiaoBaoYun-hb/css/utils/bubble.css
+++ b/JiaoBaoYun-hb/css/utils/bubble.css
@@ -7,6 +7,7 @@
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
         display: inline-block;
+        word-wrap: break-word;
         border-radius: 5px;
         padding:2.5%;
         margin:2.5%;
