--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSub.css
@@ -1,3 +1,17 @@
-.bottom-submit{
+.reply-container{
 	position: absolute;
+	bottom: 0;
+	height: 50px;
+	width: 100%;
 }
+.input-text{
+	display: inline-block;
+	max-width: 78%;
+}
+.btn-commit{
+	display: inline-block;
+	width: 20%;
+	vertical-align: middle;
+	background-color: #1296db;
+}
+
